2004-10-25  David Malcolm  <dmalcolm@redhat.com>

	* cong-vfs.c: 

	Applied patch by Jeff Martin that removes the attempt to fixup
	relative paths, since it appears to no longer be needed and is
	breaking webdav support.

2004-10-23  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-edit-preferences.c: 

	Changed dispspec list from a two-column name/description list to
	a single column with the titles presented in a different style;
	removed some dead code.

2004-10-22  David Malcolm  <dmalcolm@redhat.com>

	* cong-node.h: 

	Disable CONG_NODE_SELF_TEST for now, to get an instant big speedup.

	* cong-editor-node-element-span.c, cong-document.h: 

	Make the warn about bug 124507 Dialog of Doom only appear once per
	document, rather than continuously popping up as the error recurs.

2004-10-20  Douglas Burke  <dburke@cfa.harvard.edu>
 
	* cong-primary-window.c, cong-primary-window.h:
 
 	Added cong_primary_window_action_set_sensitive(), and
 	cong_primary_window_action_set_label().
 
	* cong-menus.c:
 
 	Updated to use cong_primary_window_action_set_sensitive() and
 	cong_primary_window_action_set_label() functions rather than the
 	SET_ACTION_LABEL and SET_ACTION_SENSITIVE macros. The Export
 	action is now insensitive if there are no exporters registered for
 	the document.
 	
	* cong-document.c, cong-document.h, cong-file-open.c:
 
 	The "Save" menu and toolbar items are now inactive when the file
 	has not changed. It's not 100% foolproof (add a space and then delete
 	it and it still thinks the file has changed).
 	Added cong_document_can_export() function.
 	
	* cong-file-export.c:
 
 	Removed the dialog indicating that no exporters are available since
 	this condition can no longer be met.	

2004-10-17  Douglas Burke  <dburke@cfa.harvard.edu>
 